[gd_scene load_steps=28 format=3 uid="uid://crpykx23pr7xa"]

[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_4hth2"]
[ext_resource type="FontFile" uid="uid://dgable46eedoj" path="res://Assets/fonts/PixelOperator8.ttf" id="2_3t614"]
[ext_resource type="AudioStream" uid="uid://wimqebl4kwy1" path="res://Assets/sounds/MCRost.mp3" id="3_jaxau"]
[ext_resource type="FontFile" uid="uid://crndknoqnocr" path="res://Assets/fonts/PixelOperator8-Bold.ttf" id="3_oe71f"]
[ext_resource type="AudioStream" uid="uid://canwu4bplrwxm" path="res://Assets/music/menu_ost.mp3" id="3_qh56o"]
[ext_resource type="FontFile" uid="uid://mhij75lh3xrl" path="res://Assets/fonts/pricedown bl.otf" id="3_xif4v"]
[ext_resource type="AudioStream" uid="uid://cxn24ov8v3b6f" path="res://Assets/sounds/tap.wav" id="3_y4341"]
[ext_resource type="Script" path="res://Scripts/menuParallaxOffset.gd" id="6_cel6n"]
[ext_resource type="Texture2D" uid="uid://dhthfhamd7rdb" path="res://Assets/sprites/background/sky1.png" id="7_2i2rl"]
[ext_resource type="Texture2D" uid="uid://bilg0lft7jen7" path="res://Assets/sprites/background/clouds2.png" id="8_kd3yn"]
[ext_resource type="Texture2D" uid="uid://c42gmig0k4txp" path="res://Assets/sprites/background/mountains3.png" id="9_tbeko"]
[ext_resource type="Texture2D" uid="uid://p8k55ibkuogk" path="res://Assets/sprites/background/hills4.png" id="10_gkux7"]
[ext_resource type="Texture2D" uid="uid://bpbqg5cdkeae0" path="res://Assets/sprites/background/clouds5.png" id="11_oqt8a"]
[ext_resource type="Texture2D" uid="uid://cmae4gerjnnij" path="res://Assets/sprites/background/clouds6.png" id="12_8wtk4"]
[ext_resource type="Texture2D" uid="uid://c0xi7o4feksv7" path="res://Assets/sprites/background/ground7.png" id="13_2rvf6"]
[ext_resource type="Texture2D" uid="uid://d3e7qcwleddrh" path="res://Assets/sprites/SlimeSprite.png" id="13_5udy1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7kn3i"]
bg_color = Color(0.284531, 0.564709, 0.285636, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0.15, 0.15, 0.15, 0.6)
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ftfsq"]
bg_color = Color(0.6, 0.6, 0.6, 0)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 1
shadow_color = Color(0.15, 0.15, 0.15, 0.6)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pr8dk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0emlq"]
atlas = ExtResource("13_5udy1")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ro2j8"]
atlas = ExtResource("13_5udy1")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_snyqx"]
atlas = ExtResource("13_5udy1")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ec4or"]
atlas = ExtResource("13_5udy1")
region = Rect2(32, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_6m165"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0emlq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ro2j8")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_snyqx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ec4or")
}],
"loop": false,
"name": &"jump",
"speed": 1.0
}]

[sub_resource type="Animation" id="Animation_c45b0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MCR:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MCR:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0.101961)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath("MenuOpening:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ParallaxBackground/ParallaxLayer/Sprite2D:modulate:r")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.187176, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ParallaxBackground/ParallaxLayer/Sprite2D:modulate:g")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.187176, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ParallaxBackground/ParallaxLayer/Sprite2D:modulate:b")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.187176, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("ParallaxBackground/ParallaxLayer/Sprite2D:modulate:a")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("ParallaxBackground/ParallaxLayer2/clouds2:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(419.556, 236)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("ParallaxBackground/ParallaxLayer3/mountains3:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(421.333, 237)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("ParallaxBackground/ParallaxLayer4/hills4:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(419.556, 236)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("ParallaxBackground/ParallaxLayer5/clouds5:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(417.778, 235)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("ParallaxBackground/ParallaxLayer6/clouds6:position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(417.778, 235)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("AnimatedSprite2D:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 864)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("ParallaxBackground/ParallaxLayer7/ground:position")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(425, 535)]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("VBoxContainer:position")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1074, 42)]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("SpectrumEchoes:position")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-510, -475)]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = false
tracks/16/path = NodePath("MenuOpening:autoplay")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_3qawb"]
resource_name = "onStart"
length = 7.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MCR:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "audio"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MCRsfx")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("3_jaxau")
}],
"times": PackedFloat32Array(0.7)
}
tracks/1/use_blend = true
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MCR:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.7, 1.86667),
"transitions": PackedFloat32Array(1.10957, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MenuOpening:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(2.33333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ParallaxBackground/ParallaxLayer/Sprite2D:modulate:r")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0.187176, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(1.86667, 3.06667)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ParallaxBackground/ParallaxLayer/Sprite2D:modulate:g")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0.187176, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(1.86667, 3.06667)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("ParallaxBackground/ParallaxLayer/Sprite2D:modulate:b")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0.187176, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(1.86667, 3.06667)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("ParallaxBackground/ParallaxLayer/Sprite2D:modulate:a")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(1.86667, 4.3)
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("ParallaxBackground/ParallaxLayer2/clouds2:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(1.9, 4.3),
"transitions": PackedFloat32Array(0.517632, 0.5),
"update": 0,
"values": [Vector2(419.556, 236), Vector2(419.556, -434)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("ParallaxBackground/ParallaxLayer3/mountains3:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(1.9, 4.5),
"transitions": PackedFloat32Array(0.535887, 0.5),
"update": 0,
"values": [Vector2(421.333, 237), Vector2(421.333, -428)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("ParallaxBackground/ParallaxLayer4/hills4:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(1.86667, 4.7),
"transitions": PackedFloat32Array(0.615572, 0.5),
"update": 0,
"values": [Vector2(419.556, 236), Vector2(419.556, -435)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("ParallaxBackground/ParallaxLayer5/clouds5:position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(1.86667, 4.9),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Vector2(417.778, 235), Vector2(417.778, -421)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("ParallaxBackground/ParallaxLayer6/clouds6:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(1.86667, 5.1),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Vector2(417.778, 235), Vector2(417.778, -405)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("ParallaxBackground/ParallaxLayer7/ground:position")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(1.83333, 5.2),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Vector2(425, 535), Vector2(425, -107)]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("AnimatedSprite2D:position")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(1.83333, 5.2),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Vector2(1, 864), Vector2(1, 222)]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("VBoxContainer:position")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(4.96667, 5.53333),
"transitions": PackedFloat32Array(0.466517, 0.466517),
"update": 0,
"values": [Vector2(-1074, 42), Vector2(-142, 42)]
}
tracks/16/type = "value"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("SpectrumEchoes:position")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(4.96667, 5.53333),
"transitions": PackedFloat32Array(0.466517, 0.466517),
"update": 0,
"values": [Vector2(-510, -475), Vector2(-510, -274)]
}
tracks/17/type = "value"
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/path = NodePath("MenuOpening:autoplay")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/keys = {
"times": PackedFloat32Array(7.03333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y2ui7"]
_data = {
"RESET": SubResource("Animation_c45b0"),
"onStart": SubResource("Animation_3qawb")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4hth2")

[node name="MenuOpening" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_qh56o")

[node name="MCRsfx" type="AudioStreamPlayer" parent="."]

[node name="buttonTap" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_y4341")

[node name="MCR" type="Label" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.101961)
z_index = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -141.0
offset_top = -108.0
offset_right = 221.0
offset_bottom = 132.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.718653, 0.718653)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_xif4v")
theme_override_font_sizes/font_size = 200
text = "MCR"
justification_flags = 0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -1074.0
offset_top = 42.0
offset_right = -861.0
offset_bottom = 179.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.33848, 1.33848)
size_flags_horizontal = 4
theme_override_constants/separation = 9

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/icon_disabled_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_3t614")
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxFlat_7kn3i")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ftfsq")
theme_override_styles/normal = SubResource("StyleBoxFlat_ftfsq")
text = "Start"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/icon_disabled_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_3t614")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_pr8dk")
theme_override_styles/hover = SubResource("StyleBoxFlat_7kn3i")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ftfsq")
theme_override_styles/normal = SubResource("StyleBoxFlat_ftfsq")
text = "Options"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/icon_disabled_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_3t614")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_pr8dk")
theme_override_styles/hover = SubResource("StyleBoxFlat_7kn3i")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ftfsq")
theme_override_styles/normal = SubResource("StyleBoxFlat_ftfsq")
text = "Exit"

[node name="SpectrumEchoes" type="Label" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -510.0
offset_top = -475.0
offset_right = 514.0
offset_bottom = -396.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(2.88785e-06, 0.566604, 0.630126, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 7
theme_override_fonts/font = ExtResource("3_oe71f")
theme_override_font_sizes/font_size = 70
text = "SPECTRUM ECHOES"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("6_cel6n")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(-14, 758)
motion_scale = Vector2(0, 0)
motion_mirroring = Vector2(1150, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
modulate = Color(0.187176, 0.187176, 0.187176, 1)
texture_repeat = 2
position = Vector2(420, -435)
scale = Vector2(3.62222, 3.62222)
texture = ExtResource("7_2i2rl")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(-14, 758)
motion_scale = Vector2(0.2, 0.2)
motion_mirroring = Vector2(1150, 0)

[node name="clouds2" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
texture_repeat = 2
position = Vector2(419.556, 236)
scale = Vector2(3.62222, 3.62222)
texture = ExtResource("8_kd3yn")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(-14, 758)
motion_scale = Vector2(0.3, 0.3)
motion_mirroring = Vector2(1150, 0)

[node name="mountains3" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
texture_repeat = 2
position = Vector2(421.333, 237)
scale = Vector2(3.63333, 3.63333)
texture = ExtResource("9_tbeko")

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(-14, 758)
motion_scale = Vector2(0.6, 0.6)
motion_mirroring = Vector2(1150, 0)

[node name="hills4" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer4"]
texture_repeat = 2
position = Vector2(419.556, 236)
scale = Vector2(3.62222, 3.62222)
texture = ExtResource("10_gkux7")

[node name="ParallaxLayer5" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(-14, 758)
motion_mirroring = Vector2(1150, 0)

[node name="clouds5" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer5"]
texture_repeat = 2
position = Vector2(417.778, 235)
scale = Vector2(3.61111, 3.61111)
texture = ExtResource("11_oqt8a")

[node name="ParallaxLayer6" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(-14, 758)
motion_scale = Vector2(1.2, 1.2)
motion_mirroring = Vector2(1150, 0)

[node name="clouds6" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer6"]
texture_repeat = 2
position = Vector2(417.778, 235)
scale = Vector2(3.61111, 3.61111)
texture = ExtResource("12_8wtk4")

[node name="ParallaxLayer7" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(-14, 758)
motion_scale = Vector2(1.2, 1.2)
motion_mirroring = Vector2(1150, 0)

[node name="ground" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer7"]
texture_repeat = 2
position = Vector2(425, 535)
scale = Vector2(3.61111, 3.61111)
texture = ExtResource("13_2rvf6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, 864)
scale = Vector2(5.28, 5.28)
sprite_frames = SubResource("SpriteFrames_6m165")
animation = &"idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_y2ui7")
}

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_exit_pressed"]
